# mortgagemath

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-or-feature.yml  config.yml  mortgage-example.yml
.github/workflows/: coverage.yml  lint.yml  release.yml  tests.yml  vignettes.yml
docs/: SUGGESTIONS.md  accuracy.md  future-work.md  v0.3-design.md  v0.4-plan.md  v0.5-plan.md  v0.6-plan.md  v0.6.1-plan.md  v0.7-plan.md
docs/sphinx/: api.md  changelog.md  conf.py  index.md  installation.md  quickstart.md  vignettes.md
docs/vignettes/: README.md  _quarto.yml  arm-regz-h14.qmd  at-a-glance.qmd  canadian-j2.qmd  examples.qmd  history.qmd  index.qmd  pandas.qmd  payment-caps-proeducate.qmd  styles.css  validation.qmd
docs/vignettes/scripts/: generate_plot.py
scripts/: generate_plot.py
src/mortgagemath/: __init__.py  __main__.py  _constructors.py  _payment.py  _schedule.py  _types.py
tests/: conftest.py  test_arms.py  test_bank_schedules.py  test_cli.py  test_constructors.py  test_intl.py  test_payment.py  test_schedule.py  test_selfcheck.py  test_v061_regressions.py  test_v07_regressions.py
tests/schedules/: README.md  arcones_soa_fm_4_1_ex4_20k_8pct_12yr_annual.csv  arcones_soa_fm_4_1_ex4_20k_8pct_12yr_annual.toml  broverman_mic_2_7a_12k_12pct_36mo.toml  broverman_mic_2_7b_12k_15pct_48mo.toml  cfpb_h25b_ficus_30yr_3875_162000.csv  cfpb_h25b_ficus_30yr_3875_162000.toml  cfpb_io_adjustable_sample_211k_4pct.csv  cfpb_io_adjustable_sample_211k_4pct.toml  chase_education_200k_500_360mo.csv  chase_education_200k_500_360mo.toml  ecampus_finmath_4_3_4_3_1_pearline_10k_10pct_4yr_annual.csv  ecampus_finmath_4_3_4_3_1_pearline_10k_10pct_4yr_annual.toml  ecampus_finmath_4_3_ex2_erika_32600_483pct_9yr.toml  ecampus_finmath_4_3_ex3_johnetta_20200_353pct_8yr.csv  ecampus_finmath_4_3_ex3_johnetta_20200_353pct_8yr.toml  ecampus_finmath_4_4_1_297500_380_q_36mo_term_240mo.toml  ecampus_finmath_4_4_1_renewal_265830p61_250_q_204mo.toml  fanniemae_mf_1103_25m_550_360mo.toml  fhlbb_1935_plan_a_3k_6pct_30_per_mo.csv  fhlbb_1935_plan_a_3k_6pct_30_per_mo.toml  geltner_ch20_cpm_1m_1200_360mo.csv  geltner_ch20_cpm_1m_1200_360mo.toml  goldstein_ch10_3_ex1_563_1200_5mo.csv  goldstein_ch10_3_ex1_563_1200_5mo.toml  las_positas_8_05_15k_900_60mo.csv  las_positas_8_05_15k_900_60mo.toml  las_positas_8_05_18k_200_60mo.csv  las_positas_8_05_18k_200_60mo.toml  las_positas_8_05_250k_550_180mo.csv  las_positas_8_05_250k_550_180mo.toml  las_positas_8_05_250k_600_360mo.csv  las_positas_8_05_250k_600_360mo.toml  las_positas_8_05_340k_350_360mo.csv  las_positas_8_05_340k_350_360mo.toml  msstate_ext_p3920_100k_700_360mo.csv  msstate_ext_p3920_100k_700_360mo.toml  olivier_chans_350100_490_36mo_term_240mo.toml  olivier_chans_renewal_316593p49_585_204mo.toml  openstax_contemp_6_12_132k650_480_360mo.csv  (+60 more)
