[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mortgagemath"
version = "0.1.0"
description = "Correct mortgage amortization calculations, verified against real bank statements"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/murraystokely/mortgagemath"
Repository = "https://github.com/murraystokely/mortgagemath"
Issues = "https://github.com/murraystokely/mortgagemath/issues"
Documentation = "https://github.com/murraystokely/mortgagemath#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mortgagemath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
