[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mortgagemath"
version = "0.1.0"
description = "Correct mortgage amortization calculations, verified against real bank statements"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/murraystokely/mortgagemath"
Repository = "https://github.com/murraystokely/mortgagemath"
Issues = "https://github.com/murraystokely/mortgagemath/issues"
Documentation = "https://github.com/murraystokely/mortgagemath#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mortgagemath"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes basics
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear (likely-bug patterns)
    "SIM",           # simplify (terser idioms)
    "RUF",           # ruff's own rules
    "D",             # pydocstyle
]
ignore = [
    "D203",          # one-blank-line-before-class — conflicts with D211 (no blank line)
    "D213",          # multi-line-summary-second-line — conflicts with D212
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]    # tests don't need module / class / function docstrings

[tool.ruff.format]
# Use ruff format defaults (Black-compatible)

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mortgagemath"]
